# amos

./: .gitignore  LICENSE  Makefile  README.md  numpy.py  pyproject.toml  requirements.txt
ci/: github-actions.yml
configs/: costs.yaml  exec.yaml  ibkr.yaml  model_lgbm.yaml  risk.yaml  transformer.yaml  universe.yaml  walkforward.yaml
deploy/cloud-init/: hetzner.yaml
deploy/systemd/: ibgateway.service  traderx-live.service
docker/: Dockerfile  docker-compose.yml
joblib/: __init__.py
lightgbm/: __init__.py
pandas/: __init__.py
scripts/: gen_targets_example.py  healthcheck.py
sklearn/: __init__.py  base.py  calibration.py  linear_model.py  preprocessing.py
tests/: test_backtest.py  test_features.py  test_ibkr_adapter_integration.py  test_ibkr_reconcile.py  test_labeling.py  test_pipeline.py  test_utils_io.py  test_walkforward.py
traderx/: __init__.py
traderx/backtest/: __init__.py  cv.py  engine.py  metrics.py  walkforward.py
traderx/exec/: __init__.py  simulate_exec.py
traderx/features/: __init__.py  cross_sectional.py  microstructure.py  pipelines.py  tech.py
traderx/ingest/: __init__.py  cli.py  ibkr_adapter.py  spot.py  vendor_cache.py
traderx/labeling/: __init__.py  triple_barrier.py
traderx/models/: __init__.py  calibration.py  ensemble.py  predict.py  regimes.py  train.py  transformer.py
traderx/pipeline/: __init__.py  system.py  walkforward.py
traderx/portfolio/: __init__.py  (+2 more)
traderx_ibkr/: __init__.py  execution.py  ibkr_client.py  live_runner.py  marketdata.py  paper_example.py  portfolio.py  risk.py
yaml/: __init__.py
(+5 files in other folders)
